--- a/src/Gnarly.WebApi/Gnarly.WebApi.csproj
+++ b/src/Gnarly.WebApi/Gnarly.WebApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,8 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Gnarly.Data\Gnarly.Data.csproj" />
     <ProjectReference Include="..\Gnarly\Gnarly.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Gnarly.Data\Gnarly.Data.csproj" />
+    <ProjectReference Include="..\Test\Test.csproj" />
   </ItemGroup>
+
 
 </Project>
