--- a/src/Gnarly/Gnarly.csproj
+++ b/src/Gnarly/Gnarly.csproj
@@ -2,7 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>Latest</LangVersion>
+        <RootNamespace>Gnarly</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
