chore: 更新 `Directory.Build.props` 文件中的 `Version` 属性为 1.0.3

--- a/src/Gnarly.WebApi/Gnarly.WebApi.csproj
+++ b/src/Gnarly.WebApi/Gnarly.WebApi.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Gnarly\Gnarly.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Gnarly.Data\Gnarly.Data.csproj" />
-    <ProjectReference Include="..\Test\Test.csproj" />
+    <ProjectReference Include="..\Gnarly.Application\Gnarly.Application.csproj" />
   </ItemGroup>
 
 
