--- a/src/Gnarly.Application/Gnarly.Application.csproj
+++ b/src/Gnarly.Application/Gnarly.Application.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <RootNamespace>Test</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
