--- a/src/Gnarly/Gnarly.csproj
+++ b/src/Gnarly/Gnarly.csproj
@@ -19,4 +19,7 @@
       <ProjectReference Include="..\Gnarly.Data\Gnarly.Data.csproj" />
     </ItemGroup>
 
+	<ItemGroup>
+		<None Include="$(OutputPath)\..\..\Gnarly\$(Configuration)\**" PackagePath="analyzers\dotnet\cs" Pack="true" Visible="false" />
+	</ItemGroup>
 </Project>
