--- a/src/Gnarly.WebApi/Gnarly.WebApi.csproj
+++ b/src/Gnarly.WebApi/Gnarly.WebApi.csproj
@@ -12,10 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Gnarly\Gnarly.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\Gnarly.Data\Gnarly.Data.csproj" />
     <ProjectReference Include="..\Gnarly.Application\Gnarly.Application.csproj" />
+    <ProjectReference Include="..\Gnarly\Gnarly.csproj" />
   </ItemGroup>
-
 
 </Project>
