--- a/src/Gnarly.WebApi/Gnarly.WebApi.csproj
+++ b/src/Gnarly.WebApi/Gnarly.WebApi.csproj
@@ -13,7 +13,17 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gnarly.Application\Gnarly.Application.csproj" />
-    <ProjectReference Include="..\Gnarly\Gnarly.csproj" />
+    <ProjectReference Include="..\Gnarly\Gnarly.csproj">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <OutputItemType>Analyzer</OutputItemType> 
+    </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
   </ItemGroup>
 
 </Project>
