更新版本号，添加新项目和接口实现
更新了 `Directory.Build.props` 文件中的版本号，从 `1.0.7` 更新到 `1.0.8`，并为 `net9.0` 框架添加了 `MicrosoftAspNetCorePackageVersion` 版本号 `9.0.0`。
在 `Gnarly.sln` 解决方案文件中，添加了 `Gnarly.Test` 项目，并更新了相应的项目配置。
新增了 `Gnarly.Test.csproj` 项目文件，目标框架为 `net8.0`，并启用了隐式使用和可空引用类型。
新增了 `ITest2Service.cs` 文件，定义了 `ITest2Service` 接口。
新增了 `Test2Service.cs` 文件，实现了 `ITest2Service` 和 `IScopeDependency` 接口。
更新了 `Gnarly.WebApi.csproj` 文件，设置了 `IsPackable` 和 `GeneratePackageOnBuild` 属性为 `true`，并添加了对 `Gnarly.Test` 项目的引用。
在 `Program.cs` 文件中，移除了 `builder.Services.AddAutoGnarly();` 这一行代码。
在 `ServiceRegistrationGenerator.cs` 文件中，添加了 `using System.Diagnostics;` 引用，并更新了命名空间，将 `namespace System` 修改为 `namespace {compilation.AssemblyName}`。

--- a/src/Gnarly.WebApi/Gnarly.WebApi.csproj
+++ b/src/Gnarly.WebApi/Gnarly.WebApi.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <IsPackable>true</IsPackable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gnarly.Application\Gnarly.Application.csproj" />
+    <ProjectReference Include="..\Gnarly.Test\Gnarly.Test.csproj" />
     <ProjectReference Include="..\Gnarly\Gnarly.csproj">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
